[package]
name = "schnorr_zk_dlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k256 = { version = "0.13.1", features = ["arithmetic"] }
rand_core = "0.6.4"
sha2 = "0.10.7"
serde = { version = "1.0.164", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
tracing = { version = "0.1.40", features = ["log"] }
